# Render_text

What_your_name/: CMakeCache.txt  CMakeLists.txt  Makefile  RenText.cpp  RenText.h  RendererText.cpp  RendererText.h  WinDow.cpp  WinDow.h  cmake_install.cmake  main.cpp
What_your_name/cmake/: FindSDL2_ttf.cmake
